Fixed spacing and pager size on smallest phones, such as iPhone 5 and Galaxy S5.

--- a/css/main.css
+++ b/css/main.css
@@ -177,6 +177,12 @@ td{
 }
 
 @media all and (max-width: 550px) {
+    #random-numbers-table {
+        text-align: center;
+    }
+    #number-list {
+        display: inline-block;
+    }
     #copy-list-button,
     #shuffle-numbers-button {
         position: absolute;
@@ -192,5 +198,25 @@ td{
     }
     #numbers-title span {
         margin-left: 0px;
+    }
+}
+
+@media all and (max-width: 360px) {
+    #random-numbers-table {
+        text-align: center;
+    }
+    #number-list {
+        display: inline-block;
+    }
+    .firstPage, .previousPage, .nextPage, .lastPage {
+        margin: 0px !important;
+        padding: 13px 10px 12px 10px !important;
+    }
+    .pageNumbers {
+        margin: 0px !important;
+    }
+    .pageNumbers a {
+        margin: 0px 7px !important;
+        padding: 0px !important;
     }
 }
